--- a/calculator.css
+++ b/calculator.css
@@ -22,7 +22,40 @@ body{
 .display{
     width: 100%;
 }
-.input-button{
-    padding: 30px ;
-
+.display input{
+    width: 100%;
+    padding: 15px 10px;
+    text-align: right;
+    border: none;
+    background-color: transparent;
+    color: #ffffffff;
+    font-size: 35px;
+}
+.display input::placeholder{
+    color: #9490Ac;
+}
+.buttons{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 40px;
+}
+.buttons input[type="button"]{
+    font-size: 20px;
+    padding: 17px;
+    border: none;
+    background-color: transparent;
+    color: #ffffff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.buttons input[type="button"]:hover{
+    box-shadow: 0 8px 25px #000d2e;
+}
+input[type="button"]#epual{
+    grid-row: span 2;
+    background-color: #f9544c;
+}
+input[type="button"][value="0"]{
+    grid-column: span 2;
 }
